<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/comm_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:gravity="top"
        android:hint="@string/comm_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/rate_stars"
            android:textColor="#000"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/rate_stars"
            style="@style/roomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="5"
            android:stepSize="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/submit_comm"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/selector01"
            android:text="@string/submit_comm"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/cancel_comm"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/selector01"
            android:text="取消"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>