<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/makeRoad_header"
            android:layout_gravity="top"
            android:background="#ff00a0e9" />

        <Button
            android:id="@+id/detail_GoBack"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/iconfont_zuojiantou" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="详情"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/makeRoad_header"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="21sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/place_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/place_pic"
            android:src="@drawable/toilet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/place_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/place_stars"
                style="@style/roomRatingBar_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />
        </LinearLayout>
    </LinearLayout>

    <com.example.amap.view.xlist.XListView
        android:id="@+id/xListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFF"
        android:cacheColorHint="#00000000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none" >
    </com.example.amap.view.xlist.XListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-60dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/shapesolid02" >

            <Button
                android:id="@+id/go_here"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector07"
                android:text="@string/go_here" />

            <Button
                android:id="@+id/mark_place"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector07"
                android:text="@string/mark_place" />

            <Button
                android:id="@+id/write_comm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector07"
                android:text="@string/write_comm" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>