<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <!--<include-->
        <!--android:id="@+id/common_actionbar"-->
        <!--layout="@layout/include_action_bar" />-->
    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector05"
        android:minHeight="50dp"
        android:paddingLeft="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_myinfo"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_set_name"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/layout_info"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />
    
    <RelativeLayout
        android:id="@+id/layout_blacklist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector05"
        android:minHeight="50dp"
        android:paddingLeft="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_blacklist"
            android:textSize="16sp"/>

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/layout_blacklist"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />

    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector05"
        android:paddingLeft="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_notify"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_open_notification"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_notification"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/rl_switch_notification"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />

    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector05"
        android:paddingLeft="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_voice"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_open_voice"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_voice"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/spit_view1"
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/rl_switch_voice"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />

    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector05"
        android:paddingLeft="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_vibrate"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_open_vibrate"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_vibrate"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />

    </RelativeLayout>
    <View
        android:id="@+id/spit_view9"
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/button4"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="位置分享"
            android:id="@+id/button4"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:background="@drawable/selector05"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <View
            android:id="@+id/spit_view2"
            android:layout_width="310dp"
            android:layout_height="0.6dp"
            android:layout_below="@+id/button4"
            android:background="#d3e3e3"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="意见反馈"
            android:id="@+id/button5"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:background="@drawable/selector05"
            android:layout_below="@+id/button4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"/>

        <View
            android:id="@+id/spit_view3"
            android:layout_width="310dp"
            android:layout_height="0.6dp"
            android:layout_below="@+id/button5"
            android:background="#d3e3e3"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="定位接口设置"
            android:id="@+id/button15"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:background="@drawable/selector05"
            android:layout_below="@+id/button5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"/>

        <View
            android:id="@+id/spit_view4"
            android:layout_width="310dp"
            android:layout_height="0.6dp"
            android:layout_below="@+id/button15"
            android:background="#d3e3e3"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="切换地图"
            android:id="@+id/change_map"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:background="@drawable/selector05"
            android:layout_below="@+id/button15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"/>

        <View
            android:id="@+id/spit_view5"
            android:layout_width="310dp"
            android:layout_height="0.6dp"
            android:layout_below="@+id/button16"
            android:background="#d3e3e3"
            android:layout_marginLeft="10dp"
            />

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:text="使用引导"-->
            <!--android:id="@+id/go_navi_btn_set"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:gravity="left|center_vertical"-->
            <!--android:textSize="16sp"-->
            <!--android:background="@drawable/selector05"-->
            <!--android:layout_below="@+id/button16"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_marginTop="1dp"/>-->
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="310dp"
        android:layout_height="0.6dp"
        android:layout_below="@+id/button4"
        android:background="#d3e3e3"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Smile.Button.logout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout" />

</LinearLayout>
</ScrollView>